# odoo-venv

./: .copier-answers.yml  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  action.yml  llms-full.txt  llms.txt  pyproject.toml  uv.toml  zensical.toml
.github/actions/setup-python-env/: action.yaml
.github/workflow/: pre-commit.yml  publish.yml
.github/workflows/: docs.yaml  e2e.yaml  migration-check.yaml  publish.yml  release.yaml  test-action-addon-install-failing.yml  test-action-addon-success.yml  test-action-addon-tests-failing.yml
odoo_venv/: __init__.py  activate.py  exceptions.py  launcher.py  main.py  modes.py  ovx.py  ovx_resolver.py  utils.py
odoo_venv/assets/: launcher.sh.template  modes.toml  presets.toml
odoo_venv/cli/: main.py  ovx_cmd.py
odoo_venv/migrations/: 1_13_0.py
site-docs/: demo.tape
site-docs/docs/: getting-started.md  index.md
site-docs/docs/javascripts/: commit-count.js  hero-scene.js
site-docs/docs/known-dependency-problem/: build-isolation-errors.md  import-name-vs-package-name.md  index.md  transitive-dependency-issues.md  version-conflicts.md
site-docs/docs/reference/: page-1.md  page-2.md  page-3.md  page-4.md
site-docs/docs/stylesheets/: hero.css  site.css
site-docs/overrides/: landing.html
skills/odoo-venv/: SKILL.md
skills/odoo-venv/references/: presets.md
src/odoo_venv/: __init__.py  main.py  utils.py
src/odoo_venv/assets/: presets.toml
src/odoo_venv/cli/: main.py
tests/: test_auto_ignore_user_overridden_odoo_reqs.py  test_cli_callbacks.py  test_conflict_resolution.py  test_extra_requirements_ignore_filter.py  test_list.py  test_list_external_dependencies.py  test_mode_cli.py  test_modes.py  test_ovx.py  test_update_command.py
tests/ovx_fixtures/addon_bad_version/: __manifest__.py
tests/ovx_fixtures/addon_v17/: __manifest__.py
(+8 files in other folders)
